added project report

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
                 <h2>Course Information</h2>
                 <p><strong>Semester:</strong> Fall 2025</p>
-                <p><strong>Course:</strong> CS Senior Project</p>
+                <p><strong>Course:</strong> CS 4850</p>
                 <p><strong>Institution:</strong> Kennesaw State University</p>
                 
                 <h2>Project Navigation</h2>
